# Observability

./: README.md  _build_notebook.py  pyproject.toml
docs/: architecture.drawio
notebook/: chronicle.ipynb
src/chronicle/: __init__.py  branch.py  core.py  dashboard.py  ergonomics.py  event.py  integrity.py  semantic.py  telemetry.py
