[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronicle"
version = "0.1.0"
description = "Merkle-DAG agent traceability with causal, integrity, and semantic views."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sanjay Babu" }]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
st = ["sentence-transformers>=2.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/chronicle"]
